# pipeline-etl-website-visits

./: .gitignore  README.md  main.py  pyproject.toml
EDA/: eda.ipynb
database/: schema.sql
flows/: etl_flow.py  orchestrator_flow.py
taks/: extract.py  transform.py
tasks/: extract.py  load.py  post_processing.py  pre_processing.py  transform.py
utils/: utils.py  utils_extract.py  utils_flows.py  utils_load.py  utils_postprocessing.py  utils_transform.py
